--- a/plugins.yml
+++ b/plugins.yml
@@ -1,15 +1,15 @@
 abcjs_basic_js:
   name: abcjs
   file: dist/abcjs-basic-min.js
-  version: 6.4.4
+  version: 6.4.3
 activate_power_mode:
   name: butterfly-extsrc
   file: dist/activate-power-mode.min.js
   version: 1.1.4
 algolia_search:
   name: algoliasearch
-  file: dist/lite/builds/browser.umd.js
-  version: 5.12.0
+  file: dist/algoliasearch-lite.umd.js
+  version: 5.7.0
 aplayer_css:
   name: aplayer
   file: dist/APlayer.min.css
@@ -42,10 +42,6 @@ canvas_ribbon:
   name: butterfly-extsrc
   file: dist/canvas-ribbon.min.js
   version: 1.1.4
-chartjs:
-  name: chart.js
-  file: dist/chart.umd.js
-  version: 4.4.6
 clickShowText:
   name: butterfly-extsrc
   file: dist/click-show-text.min.js
@@ -66,12 +62,12 @@ docsearch_css:
   name: '@docsearch/css'
   other_name: docsearch-css
   file: dist/style.css
-  version: 3.6.3
+  version: 3.6.2
 docsearch_js:
   name: '@docsearch/js'
   other_name: docsearch-js
   file: dist/umd/index.js
-  version: 3.6.3
+  version: 3.6.2
 egjs_infinitegrid:
   name: '@egjs/infinitegrid'
   other_name: egjs-infinitegrid
@@ -111,7 +107,7 @@ instantpage:
 instantsearch:
   name: instantsearch.js
   file: dist/instantsearch.production.min.js
-  version: 4.75.3
+  version: 4.74.2
 katex:
   name: katex
   file: dist/katex.min.css
@@ -137,7 +133,7 @@ medium_zoom:
 mermaid:
   name: mermaid
   file: dist/mermaid.min.js
-  version: 11.4.0
+  version: 11.2.1
 meting_js:
   name: butterfly-extsrc
   file: metingjs/dist/Meting.min.js
